2/02/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: project-namespace
  name: project-v1-back-svc
spec:
  type: ClusterIP
  selector:
    app: project-v1
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  namespace: project-namespace
  name: project-v1-front-svc
spec:
  type: ClusterIP
  selector:
    app: project-v1
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 3000
