2/02/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project-namespace
  name: project-v1-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: project-v1-front-svc
                port:
                  number: 8081
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: project-v1-back-svc
                port:
                  number: 8081
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: project-v1-back-svc
                port:
                  number: 8081
